src/objects/Product_Table__c.object
<CustomObject>
    <fields>
        <fullName>Added_Date__c</fullName>
        <label>Added Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Image_URL__c</fullName>
        <label>Image URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Product_D__c</fullName>
        <label>Product Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Unit__c</fullName>
        <label>Unit Available</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit_price__c</fullName>
        <label>Unit price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Warehouses__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Warehouse</label>
        <referenceTo>Warehouse__c</referenceTo>
        <relationshipName>MyProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Product Table</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Tables</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>proverka</fullName>
        <active>true</active>
        <errorConditionFormula>Unit_price__c &lt;= 0</errorConditionFormula>
        <errorMessage>Unit price less than or equal to zero</errorMessage>
    </validationRules>
</CustomObject>